<resources>
    <string name="app_name">Do Faster</string>
    <string name="scores">Scores</string>
    <string name="start">Let\'s GO</string>
    <string name="no_score">در حال حاضر امتیازی ثبت نشده است</string>
    <string name="default_user_name">Unknown</string>

    <!-- Main Activity -->
    <string name="speed_match_title">چالش سرعت</string>
    <string name="chalkboard_challenge_title">چالش تخته سیاه</string>
    <string name="color_match_title">چالش رنگ</string>
    <string name="larger_than_1">54 > 21</string>
    <string name="larger_than_2">70 = 70</string>
    <string name="user_name_hint">نام کاربری</string>

    <!-- Speed Match -->
    <string name="welcome_speed">Welcome To Speed Match\n%s!</string>
    <string name="both">Both</string>
    <string name="one_of_them">One Of Them</string>
    <string name="no_one">No One</string>
    <string name="look_speed">Look at the shape, carefully!</string>
    <string name="time_is_up">زمانت تموم شد!</string>

    <!-- Which One-->
    <string name="chalkboard_challenge_caption">محاسبه کن و مقدار بیشتر رو انتخاب کن</string>
    <string name="color_match_caption">معنی کلمه ی بالایی رو با رنگ کلمه ی پایینی مقایسه کن</string>
    <string name="speed_match_caption">شکل ها و رنگ ها رو با هم مقایسه کن و گزینه درست رو انتخاب کن</string>
    <string name="confirm">تأیید</string>
    <string name="cancel">لغو</string>
    <string name="welcome">کاربرِ %s خوش اومدی</string>
    <string name="equal">مساوی</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="WOIL_guide">مقدار بیشتر رو انتخاب کن</string>
    <string name="SM_guide">شکل ها و رنگ ها رو با هم مقایسه کن</string>
    <string name="dialog_title">نام خود را وارد کنید</string>
    <string name="score_popup">امتیاز کسب شده:\n%d</string>
    <string name="no_score_popup">امتیازی کسب\nنشده است</string>

</resources>
