<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/speed_match_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeated_background"
    android:clickable="true"
    android:focusable="true">

    <View
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:rotation="180"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/speed_match_points_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:src="@drawable/points_icon"
        android:tint="@color/icons"
        app:layout_constraintRight_toLeftOf="@id/speed_match_points_value"
        app:layout_constraintTop_toTopOf="@id/speed_match_points_value" />

    <TextView
        android:id="@+id/speed_match_points_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="0"
        android:textColor="@color/text"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/speed_match_timer_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:src="@drawable/timer_icon"
        android:tint="@color/icons"
        app:layout_constraintLeft_toRightOf="@id/speed_match_timer_value"
        app:layout_constraintTop_toTopOf="@id/speed_match_timer_value" />

    <TextView
        android:id="@+id/speed_match_timer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="0"
        android:textColor="@color/text"
        android:textSize="50sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/speed_match_evaluate_sign"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@id/speed_match_points_value"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/speed_match_points_value"
        app:layout_constraintVertical_bias="1" />

    <android.support.v7.widget.CardView
        android:id="@+id/speed_match_pic_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="100dp"
        app:cardBackgroundColor="@color/card_view"
        app:cardCornerRadius="@dimen/eight_dp"
        app:layout_constraintBottom_toTopOf="@id/speed_match_buttons_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_match_points_value">

        <ImageView
            android:id="@+id/speed_match_pic"
            android:layout_width="275dp"
            android:layout_height="275dp"
            android:padding="25dp" />

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/speed_match_buttons_container"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/speed_match_pic_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/both_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttons_bg"
            android:padding="@dimen/sixteen_dp"
            android:text="@string/both"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/one_of_them_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/eight_dp"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:layout_marginStart="@dimen/eight_dp"
            android:layout_weight="1.5"
            android:background="@color/buttons_bg"
            android:padding="@dimen/sixteen_dp"
            android:text="@string/one_of_them"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/no_one_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/buttons_bg"
            android:padding="@dimen/sixteen_dp"
            android:text="@string/no_one"
            android:textColor="@color/text" />

    </LinearLayout>

    <TextView
        android:id="@+id/speed_match_caution"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/eight_dp"
        android:lineSpacingMultiplier="1"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/look_speed"
        android:textColor="@color/text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_match_pic_container" />

</android.support.constraint.ConstraintLayout>