<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeated_background">

    <View
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:rotation="180"
        app:layout_constraintRight_toRightOf="parent" />

    <!--<ImageView-->
    <!--android:id="@+id/shape1"-->
    <!--android:layout_width="100dp"-->
    <!--android:layout_height="100dp"-->
    <!--android:alpha="0"-->
    <!--android:src="@drawable/circle"-->
    <!--android:tint="@color/colorPrimary"-->
    <!--app:layout_constraintBottom_toBottomOf="@id/start_speed_match"-->
    <!--app:layout_constraintHorizontal_bias="0.2"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <!--<ImageView-->
    <!--android:id="@+id/shape2"-->
    <!--android:layout_width="175dp"-->
    <!--android:layout_height="175dp"-->
    <!--android:alpha="0"-->
    <!--android:src="@drawable/circle"-->
    <!--android:tint="@color/colorAccent"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.1"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.9" />-->

    <!--<ImageView-->
    <!--android:id="@+id/shape3"-->
    <!--android:layout_width="200dp"-->
    <!--android:layout_height="200dp"-->
    <!--android:alpha="0"-->
    <!--android:src="@drawable/circle"-->
    <!--android:tint="@color/colorPrimaryDark"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.9"-->
    <!--app:layout_constraintLeft_toLeftOf="parent"-->
    <!--app:layout_constraintRight_toRightOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/speed_match_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/eight_dp"
        android:lineSpacingMultiplier="1"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/welcome_speed"
        android:textColor="@color/card_view"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/start_speed_match"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_speed_match"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:background="@drawable/btn_main"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/speed_match_scores_list"
        app:layout_constraintTop_toBottomOf="@id/speed_match_welcome" />

    <Button
        android:id="@+id/speed_match_scores_list"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:background="@drawable/btn_main"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/scores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/start_speed_match"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speed_match_welcome" />

    <FrameLayout
        android:id="@+id/speed_match_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp" />

</android.support.constraint.ConstraintLayout>