<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeated_background"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.Guideline
        android:id="@+id/CM_score_popup_left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/CM_score_popup_right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/CM_score_popup_sign_right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <android.support.constraint.Guideline
        android:id="@+id/CM_score_popup_sign_top_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        app:layout_constraintLeft_toLeftOf="parent" />

    <View
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:rotation="180"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/CM_points_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:background="@color/buttons_bg"
        android:padding="@dimen/sixteen_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/CM_time_container"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/CM_points_icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/points_icon"
            android:tint="@color/icons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/CM_points_value"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CM_points_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/english"
            android:text="0"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/CM_points_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/CM_time_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:background="@color/buttons_bg"
        android:padding="@dimen/sixteen_dp"
        app:layout_constraintLeft_toRightOf="@id/CM_points_container"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/CM_time_icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/timer_icon"
            android:tint="@color/icons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/CM_time_value"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/CM_time_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/english"
            android:text="30"
            android:textColor="@color/text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/CM_time_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/CM_caution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="0"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:text="@string/color_match_caption"
        android:textColor="@color/text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/CM_first_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CM_time_container" />

    <FrameLayout
        android:id="@+id/CM_first_card"
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="#aa000000"
        android:padding="@dimen/eight_dp"
        app:layout_constraintBottom_toTopOf="@id/CM_second_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CM_caution">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/card_view"
            app:cardCornerRadius="4dp">

            <Button
                android:id="@+id/CM_up_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:enabled="false"
                android:fontFamily="@font/farbardiyabd"
                android:gravity="center"
                android:textSize="50sp" />

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/CM_second_card"
        android:layout_width="250dp"
        android:layout_height="110dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:background="#aa000000"
        android:padding="@dimen/eight_dp"
        app:layout_constraintBottom_toTopOf="@id/CM_yes_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/CM_first_card">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/card_view"
            app:cardCornerRadius="4dp">

            <Button
                android:id="@+id/CM_down_card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:enabled="false"
                android:fontFamily="@font/farbardiyabd"
                android:gravity="center"
                android:textSize="50sp" />

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <ImageView
        android:id="@+id/CM_evaluate_sign"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@id/CM_second_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/CM_first_card" />

    <Button
        android:id="@+id/CM_yes_btn"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:background="@color/buttons_bg"
        android:enabled="false"
        android:fontFamily="@font/dimaesfahan"
        android:text="@string/yes"
        android:textColor="@color/text"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/CM_no_btn"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/CM_no_btn"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:background="@color/buttons_bg"
        android:enabled="false"
        android:fontFamily="@font/dimaesfahan"
        android:text="@string/no"
        android:textColor="@color/text"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/CM_yes_btn" />

    <View
        android:id="@+id/CM_score_popup_bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0"
        android:background="@color/score_popup_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CM_score_popup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:background="@drawable/score_popup_bg"
        android:fontFamily="@font/dimaesfahan"
        android:gravity="center"
        android:text="@string/score_popup"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/CM_score_popup_left_guide"
        app:layout_constraintRight_toRightOf="@id/CM_score_popup_right_guide"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/CM_best_sign"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:alpha="0"
        android:rotation="-25"
        android:src="@drawable/best_score_sign"
        app:layout_constraintBottom_toBottomOf="@id/CM_score_popup"
        app:layout_constraintLeft_toLeftOf="@id/CM_score_popup"
        app:layout_constraintRight_toRightOf="@id/CM_score_popup_sign_right_guide"
        app:layout_constraintTop_toTopOf="@id/CM_score_popup_sign_top_guide" />

</android.support.constraint.ConstraintLayout>